[package]
name = "ideal-doodle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.0"
r2d2 = "0.8.9"
r2d2_postgres = "0.18.1"
tokio = {version="1.14.0", features=["macros", "rt-multi-thread"]}
