[package]
name = "ideal-doodle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.0"
bb8 = "0.7.1"
bb8-postgres = "0.7.0"
env_logger = "0.9.0"
log = "0.4.14"
tokio = {version="1.14.0", features=["macros", "rt-multi-thread"]}
